fixed spacing

--- a/style.css
+++ b/style.css
@@ -882,7 +882,6 @@ video {
   #contact .contact-item .contact-info {
     width: 100%;
     text-align: center;
-    padding-left: 20px;
   }
   .contact.container .section-title {
     margin: 60px;
